changed URL requirement to URI requirement and displayed in organizations.html and the new-organization page