@@ -10,6 +10,8 @@ import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.servlet.ModelAndView;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.text.SimpleDateFormat;
 import java.util.Date;
@@ -90,7 +92,7 @@ public class AdminController {
                                            @RequestParam(value = "address", required = true) String address,
                                            @RequestParam(value = "username", required = true) String username,
                                            @RequestParam(value = "email", required = true) String email,
-                                           @RequestParam(value = "site-url", required = false) String siteURLString,
+                                           @RequestParam(value = "site-url", required = false) String siteURIString,
                                            @RequestParam(value = "password", required = true) String password,
                                            @RequestParam(value = "cpassword", required = true) String cpassword) {
 
@@ -131,16 +133,17 @@ public class AdminController {
         }
 
 //        check if url string is valid
-        URL siteURL = null;
-        try {
-            siteURL = new URL(siteURLString);
-        } catch (MalformedURLException e) {
-            e.printStackTrace();
-            if (!siteURLString.isEmpty()) {
-                System.out.println("Sorry, this site URL is not valid.");
-                return addOrganization(false,"Sorry, this site URL is invalid.");
+        URI siteURI = null;
+        if (siteURIString != null && !siteURIString.isEmpty()) {
+            try {
+                siteURI = new URI(siteURIString);
+            } catch (URISyntaxException e) {
+                e.printStackTrace();
+                System.out.println("Sorry, this site URI is not valid.");
+                return addOrganization(false, "Sorry, this site URI is invalid.");
             }
         }
+
 //        check if password is valid
         String passwordRegex = "^(?=.*\\d)(?=.*[a-z])(?=.*[A-Z]).{8,}$";
         Pattern passwordPattern = Pattern.compile(passwordRegex);
@@ -152,7 +155,7 @@ public class AdminController {
 
         System.out.println("Creating organization...");
 
-        GNZOrganization organization = new GNZOrganization(name, address, siteURL);
+        GNZOrganization organization = new GNZOrganization(name, address, siteURI);
 
         if  (this.gnzOrganizationDAO.save(organization)) {
             System.out.println("Organization created successfully.");
